# openaiclient

./: .gitignore  Cargo.toml  README.md  install.sh
data/: empty_chat.json
datafunc/: empty_chat.json
src/: aicli.rs  filesexample.rs  jsonedit.rs  listfiles.rs  main.rs  templaterunner.rs  todolist.rs  tooltester.rs
src/files/: mod.rs
src/helpers/: mod.rs
src/openaiapi/: mod.rs
src/test/: mod.rs
src/todo/: mod.rs
src/tools/: executor.rs  mod.rs
src/tools/files/: mod.rs
src/tools/todo/: mod.rs
testdata/: TEMPLATE.md  sampleresponse.json  streaming_response.txt  streaming_response_with_tools.txt
