[package]
name = "openaiclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "openaiclient"
path = "src/main.rs"

[[bin]]
name = "todolist"
path = "src/todolist.rs"

[[bin]]
name = "filesexample"
path = "src/filesexample.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = "0.11.22"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.4.1"
base64 = "0.22.1"
libc = "0.2"
